Fix sizing of white container without scrollbars

--- a/core/app/assets/stylesheets/refinery/layout.css.scss
+++ b/core/app/assets/stylesheets/refinery/layout.css.scss
@@ -17,12 +17,13 @@ p {
   line-height: 18px;
 }
 html {
-  min-height: 100%;
+  height: 100%;
 }
 body {
-  min-height: 100%;
-  margin: 0;
-  padding: 0;
+  height: 100%;
+  margin: -52px 0;
+  padding: 52px 0 0;
+  box-sizing: border-box;
   font-family: Arial, sans-serif;
   line-height: 1.5em;
   color: #41403C;
